--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dvgdaw | Desarrollador de Aplicaciones Web</title>
+    <title>dvgdaw | Desarrollador Web</title>
    
     <meta name="description" content="Desarrollador web en Motril, Granada. Especializado en diseño responsive, aplicaciones web y CMS. Experto en HTML, CSS, JavaScript, Laravel y WordPress.">
 
@@ -81,7 +81,7 @@
             <!-- Left block -->
             <div>
 
-                <h2>Daniel Venegas García<!--<span>&#128075;--></span></h2>
+                <h2>dvgdaw<!--<span>&#128075;--></span></h2>
 
                 <h3>Desarrollador Web</h2>
 
